--- a/src/css/base/forms.css
+++ b/src/css/base/forms.css
@@ -3,7 +3,7 @@
 /* ======= */
 
 @layer base {
-  /* basic inputs */
+  /* minimum height */
   input[type="text"],
   input[type="password"],
   input[type="email"],
@@ -19,12 +19,38 @@
   select,
   select[multiple],
   textarea {
-    @apply animation-300 w-full appearance-none py-1.5 px-4 min-h-[44px] border__input border__input--radius color__border-input color__bg-input border--input-padding;
+    @apply min-h-[44px];
+  }
+  
+  /* basic inputs */
+  input[type="text"],
+  input[type="password"],
+  input[type="email"],
+  input[type="number"],
+  input[type="url"],
+  input[type="date"],
+  input[type="datetime-local"],
+  input[type="month"],
+  input[type="week"],
+  input[type="time"],
+  input[type="search"],
+  input[type="tel"],
+  input,
+  select,
+  select[multiple],
+  textarea {
+    @apply animation-300 border__input border__input--radius color__border-input color__bg-input border--input-padding w-full appearance-none px-4 py-1.5;
+    &::placeholder {
+      @apply !color__input;
+    }
     &:hover {
       @apply border__input--hover;
     }
     &:focus-visible {
       @apply border__input--focus color__bg-body;
+    }
+    &:focus-visible::placeholder {
+      @apply !color__text;
     }
   }
   textarea {
@@ -52,7 +78,7 @@
   input[type="tel"],
   select,
   select[multiple] {
-    @apply border__input--radius
+    @apply border__input--radius;
   }
   textarea {
     @apply border__textarea--radius;
@@ -72,7 +98,7 @@
 
   /* checkboxes and radios */
   input[type="checkbox"] {
-    @apply cursor-pointer color__text color__border-divider-1 color__border-selected-1;
+    @apply color__text color__border-divider-1 color__border-selected-1 cursor-pointer;
     &:checked {
       @apply !color__bg-text color__text;
     }
@@ -84,7 +110,7 @@
     }
   }
   input[type="radio"] {
-    @apply rounded-full cursor-pointer color__text color__border-divider-1 color__border-selected-1;
+    @apply color__text color__border-divider-1 color__border-selected-1 cursor-pointer rounded-full;
     &:checked {
       @apply !color__bg-text color__text;
     }
@@ -96,16 +122,20 @@
     }
   }
 
-  [type='checkbox']:focus, [type='radio']:focus {
+  [type="checkbox"]:focus,
+  [type="radio"]:focus {
     outline: 2px solid transparent;
     outline-offset: 2px;
     --tw-ring-inset: var(--tw-empty, /*!*/ /*!*/);
     --tw-ring-offset-width: 2px;
     --tw-ring-offset-color: var(--color__background-body);
     --tw-ring-color: var(--color__border-selected-1);
-    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
+      var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
+      calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
+      var(--tw-shadow);
   }
 
   /* buttons */
