--- a/src/entrypoints/styles.css
+++ b/src/entrypoints/styles.css
@@ -50,18 +50,18 @@ html {
 }
 
 /* - fix for firefox range slider */
-input[type=range]::-moz-range-thumb {
-	pointer-events: all;
+input[type="range"]::-moz-range-thumb {
+  pointer-events: all;
   cursor: pointer;
-	-moz-appearance: none;
-	width: 32px;
-	height: 24px;
-/* @apply w-6 h-6 appearance-none pointer-events-auto; */
+  -moz-appearance: none;
+  width: 32px;
+  height: 24px;
+  /* @apply w-6 h-6 appearance-none pointer-events-auto; */
 }
 
 /* - strikethrough */
 .strikethrough {
-  @apply line-through decoration-2 decoration-[#00000050];
+  @apply line-through decoration-[#00000050] decoration-2;
 }
 
 /* - reset line-height */
@@ -104,9 +104,8 @@ input[type=range]::-moz-range-thumb {
 
 /* video */
 video::-webkit-media-controls-enclosure {
-  width:100%;
+  width: 100%;
   overflow: hidden;
-
 }
 video::-webkit-media-controls-panel {
   padding: var(--sizes__gap-width);
@@ -122,7 +121,7 @@ video::-webkit-media-controls-panel {
   @apply hidden;
 }
 .customscrollbar::-webkit-scrollbar {
-  @apply w-1 h-1 px-4 m-auto opacity-50;
+  @apply m-auto h-1 w-1 px-4 opacity-50;
 }
 .customscrollbar::-webkit-scrollbar-track {
   @apply color__bg-overlay-2 border__button--radius;
@@ -136,7 +135,7 @@ video::-webkit-media-controls-panel {
 
 /* - flag icons */
 .fi {
-  @apply relative inline-block pr-2 bg-center bg-no-repeat bg-contain rounded-full border--width color__border-divider-2;
+  @apply border--width color__border-divider-2 relative inline-block rounded-full bg-contain bg-center bg-no-repeat pr-2;
   width: 1.33333333em;
   line-height: 1em;
 }
